solve flex img on safari

--- a/src/styles/_library.scss
+++ b/src/styles/_library.scss
@@ -28,6 +28,8 @@
     transition: background-color .5s ease-in;
     img{
         width: 30%;
+        min-height: 0;
+        min-width: 0;
     }
     &:hover{
         background-color: rgb(207, 207, 207);
